src/index.css
html {
  font-size: 16px;
}

* {
  margin: 0;
  padding: 0;
}

h1, h2, h3, p {
  text-align: center;
}

.main-section {
  width: 70%;
  margin: 0 auto;
}

/* Header */
.header-container {
  display: inline-flex;
  justify-content: space-around;
  width:100%;
}

.header-container img {
  height: 8rem;
}

.header-container nav {
  display: flex;
  flex-direction: column;
  font-size: 1.5rem;
  justify-content: space-evenly;
}

.header-container nav a {
  text-decoration: none;
  color: black;
}

/* Amiibos List  */

.amiibo-tiles-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  width: 100%;
}

.amiibo-tile {
  display: block;
  color: gray;
  text-align: center;
  width: 20rem;
  margin-top: 2rem;
  border: 3px solid transparent;
}

.amiibo-tile a {
  text-decoration: none;
  color: black;
}

.amiibo-tile:hover {
  transition: border 0.55s;
  border: 3px solid #d0d0d0;
}
.amiibo-tile:active {
  margin-top: 0rem;
}

.amiibo-tile img {
  height: 15rem;
  max-width: 20rem;
  margin-left: auto;
  margin-right: auto;
  background-position: center;
  background-size: cover;
  margin-top: 1rem;
  margin-bottom: 0.25rem;
}

.amiibo-tile div {
  text-align: center;
}

/* Single Amiibo Page */

.single-amiibo-container {
  display: flex;   
  width: 90%;
  margin: 5rem auto;
  justify-content: space-evenly;
  border: 3px solid #d0d0d0;
  border-radius: 30px;
  background: linear-gradient(to bottom, #d0d0d0, white )
}

.single-amiibo-image {
  padding: 2rem 0;
}

.single-amiibo-info {
  margin: 2.5rem 0;
  display: flex;
  flex-direction: column;
}

.single-info-1 {
  margin-bottom: 2.5rem;
}

.single-info-1 h2, h3{
  text-align: left;
}
.single-info-1 h2 {
  margin-bottom: 1rem;
  font-size: 2.75rem;
  font-style: oblique;
  color: #36454f;
  
}

.releases-title {
  margin-bottom: 1.10rem;
}

.single-info-1 h3 {
  font-size: 1.5rem;
  font-weight: bold;
}

.single-info-2 li{
  list-style: none;
  margin-bottom: 1rem;
  font-size: 1.25rem;
} 

.single-info-2 li img{
  vertical-align: middle;
  margin-right: 1rem;
  width: 2.5rem;
  border: 2px solid black;
  border-radius: 50%;
} 

.info-style {
  color: #36454f;
}

